# phone_scan_wasm

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
dev/scripts/: get_mark.py  test_wasm.js
scripts/: build_miniprogram.js
src/: config.rs  lib.rs  models.rs
src/myutils/: image.rs  math.rs  mod.rs  myjson.rs  rendering.rs
src/recognize/: align.rs  assist_location.rs  engine.rs  fill.rs  location.rs  mod.rs  page_number.rs  vx.rs
