[package]
name = "phone_scan_wasm"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
imageproc = { version = "0.26", default-features = false, features = ["text"] }
ab_glyph = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tract-onnx = "0.22"
ndarray = "0.17.2"
getrandom = { version = "0.2", features = ["js"] }
nalgebra = "0.33"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
once_cell = "1.19"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = false

[profile.dev]
opt-level = 3
debug = false
